# popcorn

./: .env  Cargo.toml  schema.graphql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-02-16-171306_create_films/: up.sql
src/: main.rs  models.rs  schema.rs  tmdb.rs
