[package]
name = "popcorn"
version = "0.1.0"
authors = ["James Chapman <jchapman3000@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.1", features = ["extras", "postgres", "uuidv07"] }
dotenv = "0.13.0"
http = "0.1.15"
juniper = "0.11.1"
r2d2 = "0.8.3"
serde = "1.0.88"
serde_json = "1.0.38"
tower-web = { version = "0.3.4", features = ["async-await-preview"] }
tokio = "0.1.15"
uuid = "0.7.2"

[patch.crates-io]
juniper = { git = "https://github.com/graphql-rust/juniper" }
